objects/Accessory__c.object
<CustomObject>
    <description>The object holding all information of each individual accessory, modelled as a Dimension in Booker25 with a junction Object between Reservation and Accessory.</description>
    <label>Accessory</label>
    <nameField>
        <label>Accessories Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accessories</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Child Seat</fullName>
                </value>
                <value>
                    <fullName>iPad</fullName>
                </value>
                <value>
                    <fullName>SatNav</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <defaultValue>$User.Country</defaultValue>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OUV_Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
</CustomObject>